[tool.poetry]
name = "dbt-cron-timestamps"
version = "0.1.0"
description = ""
authors = ["Jay Sobel <22080862+73805@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^22.1.2"
setuptools = "^62.3.2"
dbt-snowflake = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"